# buildtest-meson

./: meson.build  vcpkg-native.txt  vcpkg.json
.github/workflows/: ci.yml
python/: setup.py
python/buildtest/: extension.pxd  extension.pyx
python/tests/: test_extension.py
src/: buildtest.cc  buildtest.def  buildtest.h
